--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fontawesome": "^5.6.3",
+    "jquery": "^3.6.0",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.0",
     "nodemon": "^2.0.7",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
